feat: Adiciona estrutura do formulário de cadastro de clientes

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,1 +1,61 @@
-<p>cadastro works!</p>
+<div fxLayout="row" fxLayoutAlign="center">
+    <div fxLayout="column" fxFlex="1000px">
+        <form class="mt-60" #clientesFrm="ngForm">
+            <mat-card>
+                <mat-card-header>
+                    <mat-card-title>Dados Pessoais</mat-card-title>
+                </mat-card-header>
+                <mat-card-content class="mt-20">
+                    <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="16px">
+                        <div fxLayout="column" fxFlex="900px">
+                            <mat-form-field class="full-width">
+                                <mat-label>Nome: *</mat-label>
+                                <input type="text" placeholder="Ex.: José da Silva" matInput>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="16px">
+                        <div fxLayout="column" fxFlex="900px">
+                            <mat-form-field class="full-width">
+                                <mat-label>Email: *</mat-label>
+                                <input type="email" placeholder="Ex.: jose@gmail.com" matInput>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="16px">
+                        <div fxLayout="column" fxFlex="400px">
+                            <mat-form-field class="full-width">
+                                <mat-label>CPF: *</mat-label>
+                                <input type="text" placeholder="Ex.: jose@gmail.com" matInput>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="16px">
+                        <div fxLayout="column" fxFlex="400px">
+                            <mat-form-field class="full-width">
+                                <mat-label>Data Nascimento: *</mat-label>
+                                <input type="date" placeholder="Ex.: jose@gmail.com" matInput>
+                            </mat-form-field>
+                        </div>
+                    </div>
+
+                   
+                </mat-card-content>
+                <mat-card-actions class="ml-10">
+                    <button mat-flat-button color="primary">
+                        <mat-icon>save</mat-icon>
+                        Salvar
+                    </button>
+                    <button mat-flat-button color="primary">
+                        <mat-icon>refresh</mat-icon>
+                        Atualizar
+                    </button>
+                    <button mat-flat-button color="accent" class="ml-5">
+                        <mat-icon>backspace</mat-icon>
+                        Lmpar
+                    </button>
+                </mat-card-actions>
+            </mat-card>
+        </form>
+    </div>
+</div>
