change: Mudança do estilo do toolbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<mat-toolbar color="primary">
-  <span>Cadastro de Clientes</span>
+<mat-toolbar color="primary" >
+  <div class="title-cadastro-cliente">
+    <mat-icon fontIcon="person" class="i-principal"></mat-icon>
+    <p>Cadastro de Clientes</p>
+  </div>
   <span class="spacer"></span>
   <a routerLink="/cadastro">
     <mat-icon fontIcon="feed"></mat-icon>
