--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,44 @@
-.spacer{
+a {
+    display: flex;
+    align-items: center;
+    padding: 12px;
+    color: #fff;
+    font-size: 14px;
+    text-decoration: none;
+}
+
+span{
+    font-size: 14px;
+    margin: 0;
+    margin-left: 5px;
+    padding: 0;
+    text-transform: uppercase;
+}
+
+p{
+    font-size: 14px;
+    margin: 0;
+    margin-left: 5px;
+    padding: 0;
+    text-transform: uppercase;
+}
+.spacer {
     flex: 1 1 auto;
+}
+.mat-toolbar{
+    height: 50px;
+    box-shadow: 0px 2px 2px rgb(119, 119, 126);
+}
+
+.mat-icon{
+    font-size: 20px;
+}
+
+.i-principal{
+    font-size: 25px;
+}
+
+.title-cadastro-cliente{
+    display: flex;
+    align-items: center;
 }
