--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,18 +1,18 @@
 <div fxLayout="row" fxLayoutAlign="center">
     <div fxLayout="column" fxFlex="1000px">
-        <form class="mt-60" #clientesFrm="ngForm" (ngSubmit)="salvar()">
-            <mat-card>
+        <form class="mt-60" #clientesFrm="ngForm" (ngSubmit)="salvarCliente()">
+            <mat-card >
                 <mat-card-header>
                     <mat-card-title>Dados Pessoais</mat-card-title>
                 </mat-card-header>
                 <mat-card-content class="mt-20">
                     <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="16px">
                         <div fxLayout="column" fxFlex="900px">
-                            <mat-form-field class="full-width">
+                            <mat-form-field class="full-width" >
                                 <mat-label>Nome: *</mat-label>
                                 <input 
                                   type="text" 
-                                  placeholder="Ex.: José da Silva" 
+                                  placeholder="Ex.: Maria da Silva" 
                                   matInput 
                                   [(ngModel)] = cliente.nome
                                   name="nome"
@@ -26,7 +26,7 @@
                                 <mat-label>Email: *</mat-label>
                                 <input 
                                   type="email" 
-                                  placeholder="Ex.: jose@gmail.com" 
+                                  placeholder="Ex.: maria@email.com" 
                                   matInput
                                   [(ngModel)]="cliente.email" 
                                   name="email"
@@ -39,8 +39,8 @@
                             <mat-form-field class="full-width">
                                 <mat-label>CPF: *</mat-label>
                                 <input 
-                                  type="text" 
-                                  placeholder="Ex.: jose@gmail.com" 
+                                  type="number" 
+                                  placeholder="Ex.: 000.000.000-00" 
                                   matInput
                                   [(ngModel)] = "cliente.cpf"
                                   name="cpf"
