--- a/src/app/consulta/consulta.component.html
+++ b/src/app/consulta/consulta.component.html
@@ -1,1 +1,64 @@
-<p>consulta works!</p>
+<div fxlayout="row" fxLayoutAlign="center">
+    <div fxLayout="column" fxFlex="1000px">
+        <form class="mt-60" #buscaForm="ngForm" (ngSubmit)="pesquisar()">
+            <mat-card appearance="outlined">
+                <mat-card-header>
+                    <mat-card-title>Consulta</mat-card-title>
+                </mat-card-header>
+                <mat-card-content class="mt-20">
+                    <div fxlayout="row">
+                        <div fxLayout="column" fxFlex="950px">
+                            <mat-form-field class="full-width">
+                                <mat-label>Nome do cliente</mat-label>
+                                <input matInput placeholder="Digite o nome do cliente" name="nomeBusca"[(ngModel)]="nomeBusca">
+                            </mat-form-field>
+                        </div>
+                    </div>
+                </mat-card-content>
+                <mat-card-actions>
+                    <button mat-flat-button color="primary" class="ml-10" type="submit">
+                        <mat-icon>search</mat-icon>
+                        Pesquisar
+                    </button>
+                </mat-card-actions>
+            </mat-card>
+        </form>
+    </div>
+</div>
+<div fxLayout="row" fxLayoutAlign="center">
+    <div fxLayout="column" fxFlex="1000px">
+        <form class="mt-20" #buscaForm="ngForm">
+            <mat-card appearance="outlined">
+                <mat-card-header>
+                    <mat-card-title>Resultado</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <table mat-table [dataSource]="listaClientes">
+                        <ng-container matColumnDef="id">
+                            <th mat-header-cell *matHeaderCellDef> Id </th>
+                            <td mat-cell *matCellDef="let cliente">{{cliente.id}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="nome">
+                            <th mat-header-cell *matHeaderCellDef> Nome </th>
+                            <td mat-cell *matCellDef="let cliente">{{cliente.nome}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="cpf">
+                            <th mat-header-cell *matHeaderCellDef> CPF </th>
+                            <td mat-cell *matCellDef="let cliente">{{cliente.cpf}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="dataNascimento">
+                            <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
+                            <td mat-cell *matCellDef="let cliente">{{cliente.dataNascimento | date : 'dd/MM/YYYY'}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="email">
+                            <th mat-header-cell *matHeaderCellDef> Email </th>
+                            <td mat-cell *matCellDef="let cliente">{{cliente.email}} </td>
+                        </ng-container>
+                        <tr mat-header-row *matHeaderRowDef="colunasTable"></tr>
+                        <tr mat-row *matRowDef="let row; columns: colunasTable;"></tr>
+                    </table>
+                </mat-card-content>
+            </mat-card>
+        </form>
+    </div>
+</div>
