--- a/src/app/consulta/consulta.component.html
+++ b/src/app/consulta/consulta.component.html
@@ -10,7 +10,8 @@
                         <div fxLayout="column" fxFlex="950px">
                             <mat-form-field class="full-width">
                                 <mat-label>Nome do cliente</mat-label>
-                                <input matInput placeholder="Digite o nome do cliente" name="nomeBusca"[(ngModel)]="nomeBusca">
+                                <input matInput placeholder="Digite o nome do cliente" name="nomeBusca"
+                                    [(ngModel)]="nomeBusca">
                             </mat-form-field>
                         </div>
                     </div>
@@ -48,11 +49,27 @@
                         </ng-container>
                         <ng-container matColumnDef="dataNascimento">
                             <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
-                            <td mat-cell *matCellDef="let cliente">{{cliente.dataNascimento | date : 'dd/MM/YYYY'}} </td>
+                            <td mat-cell *matCellDef="let cliente">{{cliente.dataNascimento | date : 'dd/MM/YYYY'}}
+                            </td>
                         </ng-container>
                         <ng-container matColumnDef="email">
                             <th mat-header-cell *matHeaderCellDef> Email </th>
                             <td mat-cell *matCellDef="let cliente">{{cliente.email}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="acoes">]
+                            <th mat-header-cell *matHeaderCellDef> Ações </th>
+                            <td mat-cell *matCellDef="let cliente">
+                                <button mat-button type="button" (click)="preparaEditar(cliente.id)">
+                                    <mat-icon>edit</mat-icon>
+                                    Editar
+                                </button>
+                            </td>
+                            <td mat-cell *matCellDef="let cliente">
+                                <button mat-flat-button>
+                                    <mat-icon>delete</mat-icon>
+                                    Deletar
+                                </button>
+                            </td>
                         </ng-container>
                         <tr mat-header-row *matHeaderRowDef="colunasTable"></tr>
                         <tr mat-row *matRowDef="let row; columns: colunasTable;"></tr>
@@ -61,4 +78,4 @@
             </mat-card>
         </form>
     </div>
-</div>
+</div>jgfeç~
