--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -62,17 +62,20 @@
                     </div>
                 </mat-card-content>
                 <mat-card-actions class="ml-10">
-                    <button mat-flat-button color="primary" type="submit">
-                        <mat-icon>save</mat-icon>
-                        Salvar
-                    </button>
-                    <button mat-flat-button color="primary">
-                        <mat-icon>refresh</mat-icon>
-                        Atualizar
-                    </button>
+                    @if(!atualizando){
+                        <button mat-flat-button color="primary" type="submit">
+                            <mat-icon>save</mat-icon>
+                            Salvar
+                        </button>
+                    }@else{
+                        <button mat-flat-button color="primary">
+                            <mat-icon>refresh</mat-icon>
+                            Atualizar
+                        </button>
+                    }
                     <button mat-flat-button color="accent" class="ml-5">
                         <mat-icon>backspace</mat-icon>
-                        Lmpar
+                        Limpar
                     </button>
                 </mat-card-actions>
             </mat-card>
