--- a/src/app/consulta/consulta.component.html
+++ b/src/app/consulta/consulta.component.html
@@ -63,13 +63,23 @@
                                     <mat-icon>edit</mat-icon>
                                     Editar
                                 </button>
-                            </td>
-                            <td mat-cell *matCellDef="let cliente">
-                                <button mat-flat-button>
+                                @if(!cliente.deletando){
+                                <button mat-flat-button (click)="preparaDeletar(cliente)">
                                     <mat-icon>delete</mat-icon>
                                     Deletar
                                 </button>
+                                }@else {
+                                <button mat-flat-button (click)="deletarCliente(cliente)">
+                                    <mat-icon>check</mat-icon>
+                                    Confirma
+                                </button>
+                                <button mat-flat-button (click)="cliente.deletando = false">
+                                    <mat-icon>close</mat-icon>
+                                    Cancela
+                                </button>
+                                }
                             </td>
+
                         </ng-container>
                         <tr mat-header-row *matHeaderRowDef="colunasTable"></tr>
                         <tr mat-row *matRowDef="let row; columns: colunasTable;"></tr>
