--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -39,11 +39,12 @@
                             <mat-form-field class="full-width">
                                 <mat-label>CPF: *</mat-label>
                                 <input 
-                                  type="number" 
+                                  type="text" 
                                   placeholder="Ex.: 000.000.000-00" 
                                   matInput
                                   [(ngModel)] = "cliente.cpf"
                                   name="cpf"
+                                  mask="000.000.000-00"
                                   >
                             </mat-form-field>
                         </div>
@@ -53,10 +54,11 @@
                             <mat-form-field class="full-width">
                                 <mat-label>Data Nascimento: *</mat-label>
                                 <input
-                                  type="date" 
+                                  type="text" 
                                   matInput
                                   [(ngModel)]="cliente.dataNascimento"
-                                  name="dataNascimento">
+                                  name="dataNascimento"
+                                  mask="00/00/0000">
                             </mat-form-field>
                         </div>
                     </div>
