feat: Adiciona mensagem de feedback para o usuário

--- a/src/app/consulta/consulta.component.html
+++ b/src/app/consulta/consulta.component.html
@@ -79,7 +79,6 @@
                                 </button>
                                 }
                             </td>
-
                         </ng-container>
                         <tr mat-header-row *matHeaderRowDef="colunasTable"></tr>
                         <tr mat-row *matRowDef="let row; columns: colunasTable;"></tr>
@@ -88,4 +87,4 @@
             </mat-card>
         </form>
     </div>
-</div>jgfeç~
+</div>
