--- a/src/app/consulta/consulta.component.html
+++ b/src/app/consulta/consulta.component.html
@@ -8,7 +8,7 @@
                 <mat-card-content class="mt-20">
                     <div fxlayout="row">
                         <div fxLayout="column" fxFlex="950px">
-                            <mat-form-field class="full-width">
+                            <mat-form-field class="full-width"  appearance="outline">
                                 <mat-label>Nome do cliente</mat-label>
                                 <input matInput placeholder="Digite o nome do cliente" name="nomeBusca"
                                     [(ngModel)]="nomeBusca">
