--- a/src/app/consulta/consulta.component.html
+++ b/src/app/consulta/consulta.component.html
@@ -45,7 +45,7 @@
                         </ng-container>
                         <ng-container matColumnDef="cpf">
                             <th mat-header-cell *matHeaderCellDef> CPF </th>
-                            <td mat-cell *matCellDef="let cliente">{{cliente.cpf}} </td>
+                            <td mat-cell *matCellDef="let cliente">{{cliente.cpf  | cpf}} </td>
                         </ng-container>
                         <ng-container matColumnDef="dataNascimento">
                             <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
