change: Altera tipo do campo data

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -54,11 +54,11 @@
                             <mat-form-field class="full-width"  appearance="outline">
                                 <mat-label>Data Nascimento: *</mat-label>
                                 <input
-                                  type="text" 
+                                  type="date" 
                                   matInput
                                   [(ngModel)]="cliente.dataNascimento"
                                   name="dataNascimento"
-                                  mask="00/00/0000">
+                                  >
                             </mat-form-field>
                         </div>
                     </div>
