--- a/src/app/consulta/consulta.component.html
+++ b/src/app/consulta/consulta.component.html
@@ -51,23 +51,28 @@
                             <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
                             <td mat-cell *matCellDef="let cliente">{{cliente.dataNascimento | date : 'dd/MM/YYYY'}}
                             </td>
-                        </ng-container>
-                        <ng-container matColumnDef="email">
-                            <th mat-header-cell *matHeaderCellDef> Email </th>
-                            <td mat-cell *matCellDef="let cliente">{{cliente.email}} </td>
+                            <ng-container matColumnDef="municipio">
+                                <th mat-header-cell *matHeaderCellDef> Município </th>
+                                <td mat-cell *matCellDef="let cliente">{{cliente.municipio}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="uf">
+                                <th mat-header-cell *matHeaderCellDef> UF </th>
+                                <td mat-cell *matCellDef="let cliente">{{cliente.uf}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="email">
+                                <th mat-header-cell *matHeaderCellDef> Email </th>
+                                <td mat-cell *matCellDef="let cliente">{{cliente.email}} </td>
+                            </ng-container>
                         </ng-container>
                         <ng-container matColumnDef="acoes">]
                             <th mat-header-cell *matHeaderCellDef> Ações </th>
-                            <td mat-cell *matCellDef="let cliente">
-                                <button mat-button type="button" (click)="preparaEditar(cliente.id)">
+                            <td mat-cell *matCellDef="let cliente" class="btn-actions">
+                                <button mat-icon-button type="button" class="btn-editar" (click)="preparaEditar(cliente.id)" matTooltip="Editar cliente">
                                     <mat-icon>edit</mat-icon>
-                                    Editar
                                 </button>
-                                <button mat-flat-button (click)="preparaDeletar(cliente)">
+                                <button mat-icon-button class="btn-excluir" (click)="preparaDeletar(cliente)" matTooltip="Excluir cliente">
                                     <mat-icon>delete</mat-icon>
-                                    Deletar
                                 </button>
-
                             </td>
                         </ng-container>
                         <tr mat-header-row *matHeaderRowDef="colunasTable"></tr>
