--- a/src/app/shared/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/shared/components/confirmation-dialog/confirmation-dialog.component.html
@@ -1,6 +1,6 @@
-<h2 mat-dialog-title>Deletar arquivo?</h2>
+<h2 mat-dialog-title>Deletar Cliente?</h2>
   <mat-dialog-content>
-  Tem certeza que quer deletar esse produto?
+  Tem certeza que quer deletar esse cliente?
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <button mat-button (click)="onNo()">Não</button>
